--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -18,3 +18,11 @@
   position: relative;
   display: block;
 }
+
+.header {
+  text-align: center;
+  background-color: #a2d3f9;
+  width: 100%;
+  height: 200px;
+  padding: 10% 10% 10% 10%;
+}
