--- a/app/templates/run-algorithm.html
+++ b/app/templates/run-algorithm.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-8">
-            You have selected {{}}
+            You have selected {{data.funcname}}
         </div>
     </div>
 </div>
