Running classifier with test score
Added the functionality of running the algorithms with a simple default train/test split and reports the test accuracy.

Todo: parameter selection based on the selected algorithm

--- a/app/templates/run-algorithm.html
+++ b/app/templates/run-algorithm.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-8">
-            You have selected {{data.funcname}}
+            You have selected {{data.funcname}}, which resulted in a test accuracy of {{score}}.
         </div>
     </div>
 </div>
